--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 header {
     background-color:var(--cor0);
-    background-image: linear-gradient(to bottom, var(--cor0), var(--cor1));
+    background-image: linear-gradient(to bottom, var(--cor2), var(--cor0));
     margin: auto;
     padding: 0px;
     border-radius: 15px 15px 0px 0px;
@@ -60,7 +60,7 @@ header p {
 }
 
 nav {
-    background-color: var(--cor1);
+    background-color: var(--cor0);
     padding: 5px 0px;
     margin: auto;
     max-width: 75%;
@@ -77,13 +77,13 @@ nav a {
 
 nav a:hover {
     background-color: var(--cor3);
-    color: var(--cor1);
+    color: var(--cor0);
     border-radius: 7px;
 }
 
 main {
     background-color: var(--cor0);
-    background-image: linear-gradient(to bottom, var(--cor1), var(--cor2));
+    background-image: linear-gradient(to bottom, var(--cor0), var(--cor1));
     max-width: 75%;
     margin: auto;
     border-radius: 0px 0px 15px 15px;
@@ -139,6 +139,7 @@ div.video > iframe {
 
 aside {
     background-color: var(--cor4);
+    background-image: linear-gradient(to top, var(--cor4), var(--cor2));
     margin: auto;
     padding: 10px;
     font-family:  Verdana, Geneva, Tahoma, sans-serif;
