--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header {
     text-align: center;
     padding-top: 20px;
     text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.37);
-    font-size:215%;
+    max-width: 100%;
 }
 
 header p {
