--- a/style.css
+++ b/style.css
@@ -38,17 +38,20 @@ header {
     margin: auto;
     padding: 0px;
     border-radius: 15px 15px 0px 0px;
-    max-width: 75%;
+    max-width: 85%;
     box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.541);
 }
 
-#principal {
+header #principal {
     font-family: var(--fonte1);
+    font-weight: 300;
     color: white;
     text-align: center;
-    padding-top: 20px;
+    padding: 20px 10px 0px 10px;
     text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.37);
-    max-width: 100%;
+    justify-content: center;
+    
+    
 }
 
 header p {
@@ -63,7 +66,7 @@ nav {
     background-color: var(--cor0);
     padding: 5px 0px;
     margin: auto;
-    max-width: 75%;
+    max-width: 85%;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.541);
 }
 
@@ -84,7 +87,7 @@ nav a:hover {
 main {
     background-color: var(--cor0);
     background-image: linear-gradient(to bottom, var(--cor0), var(--cor1));
-    max-width: 75%;
+    max-width: 85%;
     margin: auto;
     border-radius: 0px 0px 15px 15px;
     box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.541);
