--- a/style.css
+++ b/style.css
@@ -21,36 +21,40 @@
 }
 
 * {
-    margin: 0px;
+    margin: 0vw;
+    border: 0px;
     padding: 0px;
 }
 
-body {
+html {
+    width: 100%;
+}
+ body {
     background-image: url('imagens/universo.jpg');
     background-size: cover;
     background-attachment: fixed;
-    margin-top: 30px;
+    margin-top: 5vh;
+    max-width: max-content;
 }
 
 header {
     background-color:var(--cor0);
     background-image: linear-gradient(to bottom, var(--cor2), var(--cor0));
     margin: auto;
-    padding: 0px;
     border-radius: 15px 15px 0px 0px;
-    max-width: 95%;
-    box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.541);
-    
+    max-width: 100vw;
+    box-sizing: content-box;
 }
 
 header #principal {
     font-family: var(--fonte1);
     font-weight: 300;
+    font-size: 4vw;
     color: white;
     text-align: center;
     padding: 20px 10px 0px 10px;
     text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.37);
-    justify-content: center;
+    display: block;
 }
 
 header p {
@@ -65,8 +69,8 @@ nav {
     background-color: var(--cor0);
     padding: 5px 0px;
     margin: auto;
-    max-width: 95%;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.541);
+    max-width:100vw;
+    box-sizing: content-box;
 }
 
 nav a {
@@ -86,10 +90,10 @@ nav a:hover {
 main {
     background-color: var(--cor0);
     background-image: linear-gradient(to bottom, var(--cor0), var(--cor1));
-    max-width: 95%;
+    max-width: 100vw;
     margin: auto;
     border-radius: 0px 0px 15px 15px;
-    box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.541);
+    box-sizing:content-box;
 }
 
 main .titulos {
@@ -98,14 +102,15 @@ main .titulos {
     color: white;
     font-weight: 500;
     font-family: var(--fonte0);
+    margin: auto;
     padding-left: 10px;
 }
 
 p.texto {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 10px;
+    padding: 20px;
     line-height: 2em;
-    text-indent: 20px;
+    text-indent: 10px;
     text-align: center;
 }
 
@@ -146,7 +151,8 @@ aside {
     padding: 10px;
     font-family:  Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 0px 0px 15px 15px;
-    max-width: 100%;
+    max-width: 100vw;
+    box-sizing: content-box;
 }
 
 aside > p {
@@ -173,7 +179,10 @@ aside > ul > li > a:hover {
 
 footer {
     background-color: var(--cor4);  
-
+    max-width: 100vw;
+    margin: auto;
+    border-radius: 15px 15px 15px 15px;
+    box-sizing: content-box;
 }
 
 footer p {
