--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,35 +38,115 @@ body {
 
 header {
     background-color:var(--cor0);
-    color: var(--cor4);
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor1));
+    color: var(--cor0);
     margin: auto;
     padding: 30px 0px;
+    border-radius: 15px 15px 0px 0px;
     max-width: 75vw;
     text-align: center;
+    text-shadow: 5px 5px 10px black;
 }
 
 header #principal {
     font-family:var(--fonte1);
+    font-size: 2em;
+    font-weight: lighter;
+    padding: 10px;
 }
 
 nav {
-    background-color: var(--cor0);
+    background-color: var(--cor2);
+    background-image: linear-gradient(to bottom, var(--cor1), var(--cor0));
     margin: auto;
     max-width: 75vw;
+    font-family: var(--fonte2);
+    font-weight: bold;
+    font-size: 1em;
 }
 
 nav a {
     padding: 5px;
     text-decoration: none;
-    color: var(--cor2);
+    color: var(--cor4);
+    border-radius: 10px;
+}
+
+nav a:hover {
+    background-color: var(--cor4);
+    color: var(--cor0);
 }
 
 main {
     background-color: var(--cor0);
     margin: auto;
+    padding-top: 20px;
+    justify-content: center;
     max-width: 75vw;
+    border-radius: 0px 0px 15px 15px;
+}
+
+.titulos {
+    font-family: var(--fonte0);
+    color: var(--cor3);
+    padding: 0px 0px 5px 10px;
+}
+.texto {
+    font-family: var(--fonte2);
+    font-size: 0.9em;
+    padding-left: 10px;
+    justify-content: baseline;
+}
+
+div.video {
+    display: block;
+    position: relative;
+    max-width: 100vw;
+}
+
+.video {
+    display: inline;
+    position: relative;
+    left: 3vw;
+    max-width: 95vw;
+}
+
+aside ul {
+    list-style: inside;
+    padding-left: 5px;
+}
+
+ul > li > a {
+    color: var(--cor4);
+    text-decoration: none;
+}
+
+ul > li > a:hover {
+    background-color: var(--cor4);
+    color: var(--cor0);
+    border-radius: 10px;
+    padding: 5px;
 }
 
 footer {
     background-color: var(--cor4);
+    text-align: center;
+    margin-top: 10px;
+}
+
+footer p {
+    color: var(--cor1);
+    padding: 5px;
+}
+
+footer a {
+    color: var(--cor0);
+    text-decoration: none;
+    padding: 5px;
+}
+
+footer a:hover {
+    background-color: var(--cor0);
+    color: var(--cor4);
+    border-radius: 10px;
 }
