--- a/estilos/style.css
+++ b/estilos/style.css
@@ -50,9 +50,13 @@ header {
 
 header #principal {
     font-family:var(--fonte1);
-    font-size: 2em;
+    font-size: 7vw;
     font-weight: lighter;
     padding: 10px;
+}
+
+header > p {
+    font-size: 1.5em;
 }
 
 nav {
@@ -79,6 +83,7 @@ nav a:hover {
 
 main {
     background-color: var(--cor0);
+    background-image: linear-gradient( to top, var(--cor1), var(--cor0));
     margin: auto;
     padding-top: 20px;
     justify-content: center;
@@ -91,26 +96,51 @@ main {
     color: var(--cor3);
     padding: 0px 0px 5px 10px;
 }
+
 .texto {
     font-family: var(--fonte2);
     font-size: 0.9em;
-    padding-left: 10px;
+    padding: 10px;
     justify-content: baseline;
+}
+
+.imagem {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.527);
+    
 }
 
 div.video {
     display: block;
     position: relative;
-    max-width: 100vw;
+    max-width: 95%;
+    margin: auto;
+    padding-bottom: 20px;
 }
 
-.video {
-    display: inline;
+div > iframe {
+    display: block;
     position: relative;
-    left: 3vw;
-    max-width: 95vw;
+    max-width: 100%;
+    margin: auto;
 }
 
+aside {
+    padding-bottom: 10px;
+}
+
+aside > p {
+    background-color: var(--cor4);
+    color: var(--cor1);
+    width: max-content;
+    margin: auto;
+    padding: 5px;
+    border-radius: 10px;
+    font-family: var(--fonte2);
+    font-weight: bold;
+}
 aside ul {
     list-style: inside;
     padding-left: 5px;
