--- a/estilos/style.css
+++ b/estilos/style.css
@@ -113,17 +113,21 @@ main {
 }
 
 div.video {
-    display: block;
     position: relative;
     max-width: 95%;
     margin: auto;
     padding-bottom: 20px;
+    width: 560px;
+    height: 315px;
+    max-height: 500px;
 }
 
-div > iframe {
-    display: block;
-    position: relative;
-    max-width: 100%;
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     margin: auto;
 }
 
