--- a/estilos/style.css
+++ b/estilos/style.css
@@ -117,7 +117,7 @@ div.video {
     max-width: 95%;
     margin: auto;
     padding-bottom: 20px;
-    width: 560px;
+    width: 60%;
     height: 315px;
     max-height: 500px;
 }
