--- a/estilos/style.css
+++ b/estilos/style.css
@@ -69,15 +69,17 @@ nav {
     font-size: 1em;
 }
 
-nav a {
+nav input {
+    background-image: linear-gradient(to bottom, var(--cor1), var(--cor0));
     padding: 5px;
     text-decoration: none;
     color: var(--cor4);
+    border: none;
     border-radius: 10px;
 }
 
-nav a:hover {
-    background-color: var(--cor4);
+nav input:hover {
+    background-color: var(--cor0);
     color: var(--cor0);
 }
 
